--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     <main>
       <div id="socials"> 
           <a href = "https://www.linkedin.com/in/techiemum" target = "_blank"> 
-            <img src = "/images/linkedin.png" alt = "linkedin" border = "0"/> 
+            <img src = "/images/linkedinn.png" alt = "linkedin" border = "0"/> 
            </a>
            <a href = "https://www.github.com/techiemum" target = "_blank"> 
             <img src = "/images/github.png" alt = "github" border = "0"/> 
            </a>
            <a href = "https://www.twitter.com/techiemum" target = "_blank"> 
-            <img src = "/images/twitter.png" alt = "twitter" border = "0"/> 
+            <img src = "/images/twittbb.png" alt = "twitter" border = "0"/> 
            </a>
            
 
