created 3rd logo for branching purpose

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div id="logo">
             <a href="index.html" title="AsmaaS" download="Resume.pdf">
-            <img src="images/resumelog.png"></a>
+            <img src="images/pen.png"></a>
         </div>
     </header>
     <!--Nav bar-->
