--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css" integrity="sha384-N15rnJrNVz+JvnPndFI2e2yBI6x88oDLaBIIRvOOyGECP15bHnIdasxIQU1Moskr">
     <link rel="import" href="main.html">
     <title>Portfolio</title>
 </head>
