--- a/portfolio.html
+++ b/portfolio.html
@@ -33,8 +33,8 @@
         <div class="cards">
 
             <img src="./images/terminal.png" alt="terminal application">
-            <img src="./images/test1.jpg" alt="Sample photo">
-            <img src="./images/test2.jpg" alt="Sample photo">
+            <img src="./images/modern.png" alt="modern classroom">
+            <img src="./images/mylifeasacoder1.png" alt="my life as a coder">
             <img src="./images/Developer.png" alt="Sample photo">
             <img src="./images/flipdeveloper.png" alt="Sample photo">
         </div>
