changed pictures of portfolio work

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,8 +35,8 @@
             <img src="./images/terminal.png" alt="terminal application">
             <img src="./images/modern.png" alt="modern classroom">
             <img src="./images/mylifeasacoder1.png" alt="my life as a coder">
-            <img src="./images/Developer.png" alt="Sample photo">
-            <img src="./images/flipdeveloper.png" alt="Sample photo">
+            <img src="./images/Developer.png" alt="developer photo">
+            <img src="./images/flipdeveloper.png" alt="another developer photo">
         </div>
 
 </body>
