--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="import" href="main.html">
-    <title>Portfolio</title>
+    <title>Home page</title>
 </head>
 
 <body>
