--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link integrity='sha512-QBycwioDdsDWcfFGGQ4KONiu1i/GpuxXkAyfEHkJxbGfMi25QcTYaNkXb371/oZB3Ia++erc6Gae9CXUItbqlA' rel='stylesheet' href='style.css' />
     <link rel="import" href="main.html">
     <title>Home page</title>
 </head>
